<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    android:textDirection="rtl"
    tools:context=".ui.mainActivity.MainActivity">


    <ImageView
        android:id="@+id/bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitStart"
        android:src="@drawable/bus"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textDirection="rtl">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/assistant_semibold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="55sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/assistant_semibold"
            android:gravity="center"
            android:text="@string/continueWelcome"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/assistant_semibold"
                android:gravity="center"
                android:text="@string/travelInYourWay"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/assistant_semibold"
                android:gravity="center"
                android:text="@string/createTravel"
                android:textSize="30sp" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/orange"
                android:layout_margin="16dp"
                android:contentDescription="@string/orderTravel"
                android:onClick="openFormClick"
                android:src="@drawable/ic_baseline_add_24" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>